# 24Log

./: .replit  bot_config.db  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Wacko-justawacko-Online-This-is-the-start-of-the-24data-reference-channel-autumnhd-7-18--1758312242706_1758312242708.txt  Pasted-Wackojustawacko-OnlineThis-is-the-start-of-the-24data-reference-channel-autumnhd-7-18-25-3-37-PM-1758305323535_1758305323536.txt
