[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio-mqtt>=0.16.2",
    "discord-py>=2.6.3",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "python-dotenv>=1.0.0",
]
